syntax = "proto3";

package app;

// =================== User Messages ===================

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  int32  age = 4;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32  age = 3;
}

message UpdateUserRequest {
  string name = 1;
  string email = 2;
  int32  age = 3;
}

message UserResponse {
  User data = 1;
}

message UserListResponse {
  repeated User data = 1;
  int32 total = 2;
}

// =================== Generic Messages ===================

message ErrorResponse {
  string error = 1;
  int32  status_code = 2;
  string code = 3;
  repeated string details = 4;
}

message HealthResponse {
  string status = 1;
  int64  timestamp = 2;
}
